.k8/yamls/ssv-node-1-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-1-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-1
spec:
  type: ClusterIP
  ports:
    - port: 5678
      protocol: TCP
      targetPort: 5678
      name: port-5678
  selector:
    app: ssv-node-1
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: ssv-node-1
  name: ssv-node-1
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-1
  template:
    metadata:
      labels:
        app: ssv-node-1
    spec:
      containers:
      - name: ssv-node-1
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["/go/bin/ssvcli", "start-node", "--node-id=$(NODE_ID)", "--leader-id=$(LEADER_ID)", "--private-key=$(PRIVATE_KEY)", "--validator-key=$(VALIDATOR_KEY)", "--beacon-node-addr=$(BEACON_NODE_ADDR)", "--network=$(NETWORK)", "--val=$(CONSENSUS_TYPE)"]
        ports:
        - containerPort: 5678
          name: port-5678
        volumeMounts:
        - mountPath: "/data/"
          name: data            
      volumes:
      - persistentVolumeClaim:
          claimName: ssv-node-1
        name: data

      - name: ssv-node-2
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["/go/bin/ssvcli", "start-node", "--node-id=$(NODE_ID)", "--leader-id=$(LEADER_ID)", "--private-key=$(PRIVATE_KEY)", "--validator-key=$(VALIDATOR_KEY)", "--beacon-node-addr=$(BEACON_NODE_ADDR)", "--network=$(NETWORK)", "--val=$(CONSENSUS_TYPE)"]
        ports:
        - containerPort: 5678
          name: port-5678
        volumeMounts:
        - mountPath: "/data/"
          name: data            
      volumes:
      - persistentVolumeClaim:
          claimName: ssv-node-2
        name: data

      - name: ssv-node-3
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["/go/bin/ssvcli", "start-node", "--node-id=$(NODE_ID)", "--leader-id=$(LEADER_ID)", "--private-key=$(PRIVATE_KEY)", "--validator-key=$(VALIDATOR_KEY)", "--beacon-node-addr=$(BEACON_NODE_ADDR)", "--network=$(NETWORK)", "--val=$(CONSENSUS_TYPE)"]
        ports:
        - containerPort: 5678
          name: port-5678
        volumeMounts:
        - mountPath: "/data/"
          name: data            
      volumes:
      - persistentVolumeClaim:
          claimName: ssv-node-3
        name: data
