.k8/yamls/ssv-node-paul-lh-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-paul-lh-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-paul-lh
spec:
  type: ClusterIP
  ports:
    - port: 12005
      protocol: UDP
      targetPort: 12005
      name: port-12005
    - port: 13005
      protocol: TCP
      targetPort: 13005
      name: port-13005
    - port: 15005
      protocol: TCP
      targetPort: 15005
      name: port-15005
  selector:
    app: ssv-node-paul-lh
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-paul-lh
  name: ssv-node-paul-lh
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-paul-lh
  template:
    metadata:
      labels:
        app: ssv-node-paul-lh
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-paul-lh
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12005
          name: port-12005
          protocol: UDP
          hostPort: 12005
        - containerPort: 13005
          name: port-13005
          hostPort: 13005
        - containerPort: 15005
          name: port-15005
          hostPort: 15005
        volumeMounts:
        - mountPath: /data
          name: ssv-node-paul-lh
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-paul-lh
      volumes:
      - name: ssv-node-paul-lh
        persistentVolumeClaim:
          claimName: ssv-node-paul-lh
      - name: ssv-cm-validator-options-paul-lh
        configMap:
          name: ssv-cm-validator-options-paul-lh
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
