.k8/yamls/ssv-node-v2-1-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-1-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-1
spec:
  type: ClusterIP
  ports:
    - port: 12000
      protocol: UDP
      targetPort: 12000
      name: port-12000
    - port: 13000
      protocol: TCP
      targetPort: 13000
      name: port-13000        
  selector:
    app: ssv-node-v2-1
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-1
  name: ssv-node-v2-1
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-1
  template:
    metadata:
      labels:
        app: ssv-node-v2-1
    spec:
      containers:
      - name: ssv-node-v2-1
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["make", "start-node"]
        ports:
        - containerPort: 12000
          name: port-12000
          protocol: UDP
        - containerPort: 13000
          name: port-13000
