.k8/yamls/ssv-node-v2-2-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-2-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-2
spec:
  type: ClusterIP
  ports:
    - port: 12002
      protocol: UDP
      targetPort: 12002
      name: port-12002
    - port: 13002
      protocol: TCP
      targetPort: 13002
      name: port-13002
    - port: 15002
      protocol: TCP
      targetPort: 15002
      name: port-15002
  selector:
    app: ssv-node-v2-2
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-2
  name: ssv-node-v2-2
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-2
  template:
    metadata:
      labels:
        app: ssv-node-v2-2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-v2-2
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12002
          name: port-12002
          protocol: UDP
          hostPort: 12002
        - containerPort: 13002
          name: port-13002
          hostPort: 13002
        - containerPort: 15002
          name: port-15002
          hostPort: 15002
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-2
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-2
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-v2-2
        persistentVolumeClaim:
          claimName: ssv-node-v2-2
      - name: ssv-cm-validator-options-2
        configMap:
          name: ssv-cm-validator-options-2
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
