.k8/yamls/ssv-node-v2-4-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-4-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-4
spec:
  type: ClusterIP
  ports:
    - port: 12000
      protocol: UDP
      targetPort: 12000
      name: port-12000
    - port: 13000
      protocol: TCP
      targetPort: 13000
      name: port-13000
    - port: 15000
      protocol: TCP
      targetPort: 15000
      name: port-15000
  selector:
    app: ssv-node-v2-4
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-4
  name: ssv-node-v2-4
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-4
  template:
    metadata:
      labels:
        app: ssv-node-v2-4
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-1
              topologyKey: kubernetes.io/hostname
            weight: 1
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-2
              topologyKey: kubernetes.io/hostname
            weight: 1
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-3
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - name: ssv-node-v2-4
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["make", "start-node"]
        ports:
        - containerPort: 12000
          name: port-12000
          protocol: UDP
          hostPort: 12000            
        - containerPort: 13000
          name: port-13000
          hostPort: 13000
        - containerPort: 15000
          name: port-15000
          hostPort: 15000
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-4
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-4
      volumes:
      - name: ssv-node-v2-4
        persistentVolumeClaim:
          claimName: ssv-node-v2-4
      - name: ssv-cm-validator-options-4
        configMap:
          name: ssv-cm-validator-options-4
      hostNetwork: true
