.k8/yamls/ssv-node-v2-6-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-6-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-6
spec:
  type: ClusterIP
  ports:
    - port: 12006
      protocol: UDP
      targetPort: 12006
      name: port-12006
    - port: 13006
      protocol: TCP
      targetPort: 13006
      name: port-13006
    - port: 15006
      protocol: TCP
      targetPort: 15006
      name: port-15006
  selector:
    app: ssv-node-v2-6
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-6
  name: ssv-node-v2-6
  namespace: REPLACE_NAMESPACE
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-6
  template:
    metadata:
      labels:
        app: ssv-node-v2-6
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-v2-6
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12006
          name: port-12006
          protocol: UDP
          hostPort: 12006
        - containerPort: 13006
          name: port-13006
          hostPort: 13006
        - containerPort: 15006
          name: port-15006
          hostPort: 15006
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-6
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-6
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-v2-6
        persistentVolumeClaim:
          claimName: ssv-node-v2-6
      - name: ssv-cm-validator-options-6
        configMap:
          name: ssv-cm-validator-options-6
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
