.k8/yamls/ssv-explorer.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssv-explorer
  namespace: REPLACE_NAMESPACE
spec:
  hosts:
    - "ws-exporter.REPLACE_DOMAIN_SUFFIX"
  gateways:
    - ssv-explorer
  http:
    - route:
        - destination:
            host: ssv-explorer
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ssv-explorer
  namespace: REPLACE_NAMESPACE
spec:
  selector:
    istio: ingressgateway-int
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "ws-exporter.REPLACE_DOMAIN_SUFFIX"
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-explorer
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-explorer
spec:
  type: ClusterIP
  ports:
    - port: 12000
      protocol: UDP
      targetPort: 12000
      name: port-12000
    - port: 13000
      protocol: TCP
      targetPort: 13000
      name: port-13000
    - protocol: TCP
        port: 14000
        targetPort: 14000
        name: port-14000

  selector:
    app: ssv-explorer
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: ssv-explorer
  name: ssv-explorer
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-explorer
  template:
    metadata:
      labels:
        app: ssv-explorer
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-1
              topologyKey: kubernetes.io/hostname
            weight: 1
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-2
              topologyKey: kubernetes.io/hostname
            weight: 1
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-3
              topologyKey: kubernetes.io/hostname
            weight: 1
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - ssv-node-v2-4
              topologyKey: kubernetes.io/hostname
            weight: 1              
      containers:
      - name: ssv-explorer
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["make", "start-exporter"]
        ports:
        - containerPort: 12000
          name: port-12000
          hostPort: 12000            
          protocol: UDP
        - containerPort: 13000
          name: port-13000
          hostPort: 13000
        - containerPort: 14000
          name: port-14000
          hostPort: 14000
        volumeMounts:
        - mountPath: /data
          name: ssv-explorer
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-explorer-cm
      volumes:
      - name: ssv-explorer
        persistentVolumeClaim:
          claimName: ssv-explorer
      - name: ssv-explorer-cm
        configMap:
          name: ssv-explorer-cm
      hostNetwork: true
