.k8/yamls/ssv-exporter-v2.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssv-exporter-v2
  namespace: REPLACE_NAMESPACE
spec:
  hosts:
  - "ws-exporter-v2.REPLACE_DOMAIN_SUFFIX"
  gateways:
  - ssv-exporter-v2
  http:
  - route:
    - destination:
        host: ssv-exporter-v2
        port:
          number: 14008
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ssv-exporter-v2
  namespace: REPLACE_NAMESPACE
spec:
  selector:
    istio: ingressgateway-int
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ws-exporter-v2.REPLACE_DOMAIN_SUFFIX"
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-exporter-v2
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-exporter-v2
spec:
  type: ClusterIP
  ports:
    - port: 12008
      protocol: UDP
      targetPort: 12008
      name: port-12008
    - port: 13008
      protocol: TCP
      targetPort: 13008
      name: port-13008
    - port: 14008
      protocol: TCP
      targetPort: 14008
      name: port-14008
    - port: 15008
      protocol: TCP
      targetPort: 15008
      name: port-15008
  selector:
    app: ssv-exporter-v2
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-exporter-v2
  name: ssv-exporter-v2
  namespace: REPLACE_NAMESPACE
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-exporter-v2
  template:
    metadata:
      labels:
        app: ssv-exporter-v2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
                  - key: beta.kubernetes.io/instance-type
                    operator: In
                    values:
                      - m5a.4xlarge
      containers:
      - name: ssv-exporter-v2
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: 4096Mi
        command: ["make", "start-node"]
        ports:
        - containerPort: 12008
          name: port-12008
          hostPort: 12008
          protocol: UDP
        - containerPort: 13008
          name: port-13008
          hostPort: 13008
        - containerPort: 14008
          name: port-14008
          hostPort: 14008
        - containerPort: 15008
          name: port-15008
          hostPort: 15008
        volumeMounts:
        - mountPath: /data
          name: ssv-exporter-v2
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-exporter-v2-cm
      volumes:
      - name: ssv-exporter-v2
        persistentVolumeClaim:
          claimName: ssv-exporter-v2
      - name: ssv-exporter-v2-cm
        configMap:
          name: ssv-exporter-v2-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
